# python-aufbau-kurs

./: README.md  kursinhalte.md  kursuebersicht.md  tag_1.md  tag_2.md  tag_3.md
beispiele/: dataclass_ex_05.py  dataclass_ex_06.py  dekoratoren_ex_02.py  dekoratoren_ex_03.py  dekoratoren_ex_06.py  idiomatisches_oop_ex_03.py  idiomatisches_oop_ex_04.py  idiomatisches_oop_ex_06.py  idiomatisches_oop_ex_07.py  idiomatisches_oop_ex_08.py  idiomatisches_oop_ex_10.py  idiomatisches_python_ex_04.py  idiomatisches_python_ex_06.py  idiomatisches_python_ex_08.py  metaklassen_ex_01.py  oop_grundlagen_ex_03.py  oop_grundlagen_ex_04.py  oop_grundlagen_ex_07.py  oop_grundlagen_ex_08.py  oop_grundlagen_ex_09.py  oop_grundlagen_ex_10.py  spezial_attribute_methoden_ex_01.py  spezial_attribute_methoden_ex_03.py  spezial_attribute_methoden_ex_06.py  spezial_attribute_methoden_ex_07.py  spezial_attribute_methoden_ex_08.py  spezial_attribute_methoden_ex_10.py  vektor_ex_01.py  vektor_ex_02.py  vektor_ex_03.py  vektor_ex_04.py  vererbung_2_ex_01.py  vererbung_3_ex_01.py  vererbung_ex_02.py
beispiele/1_oop/: abc_shapes.py  class_static_methoden_ex_01.py  class_static_methoden_ex_02.py  oop_grundlagen_ex_01.py  oop_grundlagen_ex_02.py  oop_grundlagen_ex_05.py  oop_grundlagen_ex_06.py  property_decorator_ex_01.py  spezial_attribute_methoden_ex_02.py  spezial_attribute_methoden_ex_04.py  spezial_attribute_methoden_ex_05.py  spezial_attribute_methoden_ex_09.py  vererbung_ex_01.py
beispiele/2_oop_pattern/: dataclass_ex_01.py  dataclass_ex_02.py  (+9 more)
loesungen/6_packaging/csvreader/: .flake8  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
loesungen/6_packaging/csvreader/src/csvreader/: __about__.py
loesungen/6_packaging/csvreader/tests/: __init__.py  test_csvreader.py
notebooks/: oop.ipynb  tag_1.ipynb  tag_2.ipynb  tag_3.ipynb
tools/: extractcode.py
(+91 files in other folders)
